remove desktop cloud synchronization
